--- a/BlogApp.WebApi/appsettings.json
+++ b/BlogApp.WebApi/appsettings.json
@@ -7,13 +7,13 @@
     }
   },
   "JWTInfo":{
-    "Issuer" : "http://localhost:64501",
-    "Audience" : "http://localhost:5000",
-    "SecurityKey" : "barisbarisbaris1",
+    "Issuer" : "***",
+    "Audience" : "***",
+    "SecurityKey" : "***",
     "Expires" : 40
   },
   "ConnectionStrings": {
-    "db1": "Server = DESKTOP-QFDBI56; Database = BlogAppDb; Trusted_Connection = True; MultipleActiveResultSets = true"
+    "db1": "***"
   },
     "AllowedHosts": "*"
   }
